:children_crossing: Improve daily temp experience (fix sizes and spacing of daily high lows in lower half of UI)

--- a/src/components/Daily.scss
+++ b/src/components/Daily.scss
@@ -39,7 +39,7 @@
     }
 
     .temps {
-      @apply pl-12;
+      @apply pl-6;
       @apply text-lg;
       @apply align-top;
       @apply text-right;
